<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>de.mediathekview</groupId>
	<artifactId>MediathekView</artifactId>
	<version>13.3.1-SNAPSHOT</version>
	<packaging>jar</packaging>

	<name>${project.groupId}:${project.artifactId}</name>
	<description>MediathekView Desktop Client</description>
	<url>https://www.mediathekview.de/</url>

	<licenses>
		<license>
			<name>GNU General Public License (GPL) version 3.0</name>
			<url>https://www.gnu.org/licenses/gpl-3.0.txt</url>
		</license>
	</licenses>

	<developers>
		<developer>
			<id>Nicklas2751</id>
			<name>Nicklas Wiegandt</name>
			<email>nicklas@mediathekview.de</email>
		</developer>
		<developer>
			<id>derreisende77</id>
			<name>Christian F.</name>
			<url>https://github.com/derreisende77</url>
		</developer>
		<developer>
			<id>pidoubleyou</id>
			<name>Peter W.</name>
			<url>https://github.com/pidoubleyou</url>
		</developer>
		<developer>
			<id>TheSasch</id>
			<name>Sascha Wiegandt</name>
			<url>https://github.com/thesasch</url>
		</developer>
		<developer>
			<id>alex1702</id>
			<name>Alexander Finkhäuser</name>
			<url>https://github.com/alex1702</url>
		</developer>
	</developers>

	<scm>
		<connection>scm:git:git://github.com/mediathekview/MLib.git</connection>
		<developerConnection>scm:git:ssh://github.com:mediathekview/MLib.git</developerConnection>
		<url>https://github.com/mediathekview/MLib/tree/master</url>
	</scm>

	<repositories>
		<repository>
			<id>oss.sonatype.org-snapshot</id>
			<url>http://oss.sonatype.org/content/repositories/snapshots</url>
			<releases>
				<enabled>false</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
	</repositories>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>

		<junit.jupiter.version>5.3.1</junit.jupiter.version>
		<javafx.version>12-ea+9</javafx.version>
		<mainclass>mediathek.Main</mainclass>
	</properties>

	<dependencies>
		<dependency>
			<groupId>eu.hansolo</groupId>
			<artifactId>tilesfx</artifactId>
			<version>1.6.5</version>
		</dependency>

		<dependency>
			<groupId>org.xerial</groupId>
			<artifactId>sqlite-jdbc</artifactId>
			<version>3.25.2</version>
		</dependency>

		<dependency>
			<groupId>com.sun.activation</groupId>
			<artifactId>javax.activation</artifactId>
			<version>1.2.0</version>
		</dependency>

		<dependency>
			<groupId>javax.transaction</groupId>
			<artifactId>javax.transaction-api</artifactId>
			<version>1.2</version>
		</dependency>

		<!-- Apache Commons Lang für Utils -->
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.8.1</version>
		</dependency>

		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-text</artifactId>
			<version>1.6</version>
		</dependency>

		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-configuration2</artifactId>
			<version>2.4</version>
		</dependency>

		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.6</version>
		</dependency>

		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-compress</artifactId>
			<version>1.18</version>
		</dependency>
		<!-- Apache Commons Compress needs this for xz Format -->
		<dependency>
			<groupId>org.tukaani</groupId>
			<artifactId>xz</artifactId>
			<version>1.8</version>
		</dependency>

		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>27.0.1-jre</version>
		</dependency>

		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-core</artifactId>
			<version>2.9.8</version>
		</dependency>

		<!-- Gui-Elemente -->
		<dependency>
			<groupId>org.controlsfx</groupId>
			<artifactId>controlsfx</artifactId>
			<version>9.0.0</version>
		</dependency>
		<dependency>
			<groupId>com.miglayout</groupId>
			<artifactId>miglayout-core</artifactId>
			<version>5.2</version>
		</dependency>
		<dependency>
			<groupId>com.miglayout</groupId>
			<artifactId>miglayout-swing</artifactId>
			<version>5.2</version>
		</dependency>
		<dependency>
			<groupId>com.miglayout</groupId>
			<artifactId>miglayout-javafx</artifactId>
			<version>5.2</version>
		</dependency>
		<dependency>
			<groupId>com.github.jiconfont</groupId>
			<artifactId>jiconfont-swing</artifactId>
			<version>1.0.1</version>
		</dependency>
		<dependency>
			<groupId>com.github.jiconfont</groupId>
			<artifactId>jiconfont-font_awesome</artifactId>
			<version>4.7.0.0</version>
		</dependency>
		<dependency>
			<groupId>org.bidib.com.jidesoft</groupId>
			<artifactId>jide-common</artifactId>
			<version>3.7.3</version>
		</dependency>

		<!-- Event Bus Mbassador -->
		<dependency>
			<groupId>net.engio</groupId>
			<artifactId>mbassador</artifactId>
			<version>1.3.2</version>
		</dependency>

		<!-- Datenbank -->
		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<version>1.4.197</version>
		</dependency>

		<!-- Hikary Connection Pool -->
		<dependency>
			<groupId>com.zaxxer</groupId>
			<artifactId>HikariCP</artifactId>
			<version>3.2.0</version>
		</dependency>

		<dependency>
			<groupId>com.zaxxer</groupId>
			<artifactId>sansorm</artifactId>
			<version>3.7</version>
		</dependency>

		<dependency>
			<groupId>com.squareup.okhttp3</groupId>
			<artifactId>okhttp</artifactId>
			<version>3.12.1</version>
		</dependency>

		<dependency>
			<groupId>org.jetbrains</groupId>
			<artifactId>annotations</artifactId>
			<version>16.0.2</version>
		</dependency>

		<dependency>
			<groupId>com.glazedlists</groupId>
			<artifactId>glazedlists</artifactId>
			<version>1.11.0</version>
		</dependency>


		<!-- JavaFX -->
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-base</artifactId>
			<version>${javafx.version}</version>
		</dependency>

		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-controls</artifactId>
			<version>${javafx.version}</version>
		</dependency>

		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-media</artifactId>
			<version>${javafx.version}</version>
		</dependency>

		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-swing</artifactId>
			<version>${javafx.version}</version>
		</dependency>


		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-web</artifactId>
			<version>${javafx.version}</version>
		</dependency>

		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-fxml</artifactId>
			<version>${javafx.version}</version>
		</dependency>

		<!-- Logging -->
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>2.11.1</version>
		</dependency>

		<!-- JUnit 5 Jupiter -->
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>${junit.jupiter.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-params</artifactId>
			<version>${junit.jupiter.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>${junit.jupiter.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.assertj</groupId>
			<artifactId>assertj-core</artifactId>
			<version>3.11.1</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>2.23.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-junit-jupiter</artifactId>
			<version>2.23.0</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<finalName>MediathekView</finalName>
		<plugins>
			<plugin>
				<artifactId>maven-clean-plugin</artifactId>
				<version>3.0.0</version>
			</plugin>
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.22.1</version>
				<configuration>
					<argLine>
						--illegal-access=deny
					</argLine>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-resources-plugin</artifactId>
				<version>3.0.2</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.0.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<phase>verify</phase>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<release>11</release>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.2.0</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<shadedArtifactAttached>false</shadedArtifactAttached>
							<transformers>
								<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
									<mainClass>${mainclass}</mainClass>
								</transformer>
							</transformers>
							<excludes>
								<exclude>res/*</exclude>
							</excludes>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-jar-plugin</artifactId>
				<configuration>
					<archive>
						<manifestEntries>
							<SplashScreen-Image>splash.png</SplashScreen-Image>
						</manifestEntries>
					</archive>
				</configuration>
				<version>3.1.0</version>
			</plugin>
			<plugin>
				<artifactId>maven-install-plugin</artifactId>
				<version>2.5.2</version>
			</plugin>
			<plugin>
				<artifactId>maven-deploy-plugin</artifactId>
				<version>2.8.2</version>
			</plugin>
		</plugins>

	</build>
	
	<profiles>
		<profile>
				<id>windows</id>
			    <activation>
					<os>
						<family>windows</family>
					</os>
				</activation>
			<dependencies>
				<dependency>
					<groupId>org.openjfx</groupId>
					<artifactId>javafx-graphics</artifactId>
					<version>${javafx.version}</version>
					<classifier>win</classifier>
				</dependency>
			</dependencies>
			<build>
			<plugins>
				<plugin>
					<artifactId>maven-resources-plugin</artifactId>
					<version>2.6</version>
					<executions>
						<execution>
							<id>copy-resources</id>
							<phase>validate</phase>
							<goals>
								<goal>copy-resources</goal>
							</goals>
							<configuration>
								<outputDirectory>${basedir}/target/res</outputDirectory>
								<resources>
									<resource>
										<directory>res</directory>
										<filtering>true</filtering>
										<excludes>
											<exclude>*.sh</exclude>
										</excludes>
									</resource>
								</resources>
							</configuration>
						</execution>
					</executions>
				</plugin>
				<!-- Distribution Exe, and Archives -->
				<plugin>
						<groupId>com.akathist.maven.plugins.launch4j</groupId>
						<artifactId>launch4j-maven-plugin</artifactId>
						<executions>
						<execution>
							<id>mv-exe</id>
							<phase>package</phase>
							<goals><goal>launch4j</goal></goals>
							<configuration>
								<headerType>gui</headerType>
								<outfile>target/MediathekView.exe</outfile>
								<dontWrapJar>true</dontWrapJar>
								<mainClassName>${mainclass}</mainClassName>
								<icon>res/MediathekView.ico</icon>
								<initialHeapSize>256</initialHeapSize>
								<maxHeapSize>1024</maxHeapSize>
								<maxHeapPercent>80</maxHeapPercent>
								<jar>MediathekView.jar</jar>
								<jre>
									<minVersion>11</minVersion>
								</jre>
							</configuration>
						</execution>
						<execution>
							<id>mv-ipv4-exe</id>
							<phase>package</phase>
							<goals><goal>launch4j</goal></goals>
							<configuration>
								<headerType>gui</headerType>
								<outfile>target/MediathekView_ipv4.exe</outfile>
								<dontWrapJar>true</dontWrapJar>
								<mainClassName>${mainclass}</mainClassName>
								<icon>res/MediathekView.ico</icon>
								<initialHeapSize>256</initialHeapSize>
								<maxHeapSize>1024</maxHeapSize>
								<maxHeapPercent>80</maxHeapPercent>
								<jar>MediathekView.jar</jar>
								<jre>
									<minVersion>11</minVersion>
								</jre>
								<opts>
									<opt>-Djava.net.preferIPv4Stack=true</opt>
								</opts>
							</configuration>
						</execution>
						<execution>
							<id>mv-portable-exe</id>
							<phase>package</phase>
							<goals><goal>launch4j</goal></goals>
							<configuration>
								<headerType>gui</headerType>
								<outfile>target/MediathekView_Portable.exe</outfile>
								<dontWrapJar>true</dontWrapJar>
								<mainClassName>${mainclass}</mainClassName>
								<icon>res/MediathekView.ico</icon>
								<cmdLine>Einstellungen/.mediathek3</cmdLine>
								<initialHeapSize>256</initialHeapSize>
								<maxHeapSize>1024</maxHeapSize>
								<maxHeapPercent>80</maxHeapPercent>
								<jar>MediathekView.jar</jar>
								<jre>
									<minVersion>11</minVersion>
								</jre>
								<opts>
									<opt>-DmvLogOutputPath=Einstellungen/.mediathek3/mediathekview.log</opt>
								</opts>
							</configuration>
						</execution>
					</executions>
				</plugin>
				<plugin>
						<artifactId>maven-assembly-plugin</artifactId>
						<version>2.5.3</version>
						<configuration>
						<finalName>MediathekView-${project.version}-win</finalName>
						<appendAssemblyId>false</appendAssemblyId>
						<descriptor>src/assembly/dep_win.xml</descriptor>
						</configuration>
						<executions>
							<execution>
										<id>create-archive</id>
										<phase>package</phase>
										<goals>
											<goal>single</goal>
										</goals>
							</execution>
						</executions>
					</plugin>
			</plugins>
		</profile>
		<profile>
				<id>linux</id>
			    <activation>
					<os>
						<family>unix</family>
					</os>
				</activation>
			<dependencies>
				<dependency>
					<groupId>org.openjfx</groupId>
					<artifactId>javafx-graphics </artifactId>
					<version>${javafx.version}</version>
					<classifier>linux</classifier>
				</dependency>
			</dependencies>
			<build>
			<plugins>
				<plugin>
					<artifactId>maven-resources-plugin</artifactId>
					<version>2.6</version>
					<executions>
						<execution>
							<id>copy-resources</id>
							<phase>validate</phase>
							<goals>
								<goal>copy-resources</goal>
							</goals>
							<configuration>
								<outputDirectory>${basedir}/target/res</outputDirectory>
								<resources>
									<resource>
										<directory>res</directory>
										<filtering>true</filtering>
										<excludes>
											<exclude>*.exe</exclude>
										</excludes>
									</resource>
								</resources>
							</configuration>
						</execution>
					</executions>
				</plugin>
				<plugin>
						<artifactId>maven-assembly-plugin</artifactId>
						<version>2.5.3</version>
						<configuration>
						<finalName>MediathekView-${project.version}-linux</finalName>
						<appendAssemblyId>false</appendAssemblyId>
						<descriptor>src/assembly/dep_linux.xml</descriptor>
						</configuration>
						<executions>
							<execution>
										<id>create-archive</id>
										<phase>package</phase>
										<goals>
											<goal>single</goal>
										</goals>
							</execution>
						</executions>
					</plugin>
			</plugins>
		</profile>
		<profile>
				<id>mac</id>
			    <activation>
					<os>
						<family>mac</family>
					</os>
				</activation>
			<dependencies>
				<dependency>
					<groupId>org.openjfx</groupId>
					<artifactId>javafx-graphics </artifactId>
					<version>${javafx.version}</version>
					<classifier>mac</classifier>
				</dependency>
			</dependencies>
			<build>
			<plugins>
				<plugin>
						<artifactId>maven-assembly-plugin</artifactId>
						<version>2.5.3</version>
						<configuration>
						<finalName>MediathekView-${project.version}-mac</finalName>
						<appendAssemblyId>false</appendAssemblyId>
						<descriptor>src/assembly/dep_mac.xml</descriptor>
						</configuration>
						<executions>
							<execution>
										<id>create-archive</id>
										<phase>package</phase>
										<goals>
											<goal>single</goal>
										</goals>
							</execution>
						</executions>
					</plugin>
			</plugins>
		</profile>
</project>
